[package]
name = "conc-map-bench"
version = "0.2.0-rc.1+240901"
authors = ["Acrimon <joel.wejdenstal@gmail.com>", "Hantong Chen"]
edition = "2021"
publish = false

[dependencies]
# Dev deps
clap = { version = "4.5", features = ["derive"] }
num_cpus = "1"
paste = "1.0"
serde = { version = "1", features = ["derive", "rc"] }
toml = "0.8"

# Bench deps
bustle = "0.5.1"
crossbeam-epoch = "0.9"
csv = "1.2.2"
plotters = "0.3.5"

# Logging deps
tracing-subscriber = "0.3.17"

# Helper for concurrent map
ahash = "=0.8.11"
mimalloc = { version = "=0.1.43", optional = true }
parking_lot = "=0.12.3"
seize = "=0.3.3"                                            # For flurry       
tikv-jemallocator = { version = "=0.6.0", optional = true }

# Map to benchmark(all pinned to latest version till release new version)
chashmap = "=2.2.2"
contrie = "=0.1.4"
crossbeam-skiplist = "=0.1.3"
dashmap = { version = "=6.0.1", features = ["inline"] }
dashmap5 = { package = "dashmap", version = "=5.5.3", features = ["inline"] }
evmap = "=10.0.2"
flurry = "=0.5.1"
hashlink = "=0.9.1"
papaya = "=0.1.3"
scc = "=2.1.16"


[features]
default = ["alloc_mimalloc"]
alloc_mimalloc = ["dep:mimalloc"]
alloc_jemalloc = ["dep:tikv-jemallocator"]

[profile.release]
opt-level = 3
debug = false
lto = true
codegen-units = 1
split-debuginfo = "unpacked"
strip = true
panic = "abort"
